# Machizmo

./: .gitignore  CMakeLists.txt  README.md  build.sh  test1.cpp  test2.cpp
include/: MouseSettings.hpp  Utilities.hpp
src/: test1.cpp  test2.cpp  test3.cpp  test3_Abhirup.cpp
